Fix immutable collection being used instead of mutable version within curios event