@@ -20,6 +20,7 @@ import top.theillusivec4.curios.compat.WrappedCurioItemHandler;
 
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 public class DeathWrapperEventsImpl implements OnDeathCallback, OnDropCallback {
 
@@ -47,7 +48,7 @@ public class DeathWrapperEventsImpl implements OnDeathCallback, OnDropCallback {
 
                     return itemEntity;
                 }).filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.toList());
 
         var dropEventTest = new CurioDropsEvent(entity, handler, damageSource, itemEntities, 0, false);
 
